library/core-utils/src/main/java/com/example/core/utils/http/errors/ServiceException.java
package com.example.core.utils.http.errors;

import lombok.Getter;
import lombok.NonNull;
import lombok.RequiredArgsConstructor;
import lombok.Setter;

@RequiredArgsConstructor
public abstract class ServiceException extends RuntimeException {

    @Getter
    @Setter
    @NonNull
    private String code;

    @Getter
    @Setter
    @NonNull
    private String message;

    @Getter
    private long timestamp = System.currentTimeMillis();

}
